--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,9 @@
 # Build and Release Folders
-bin-debug/
-bin-debug-old/
-bin-release/
-out/
-target/
 node_modules/
 
 # Dev files
-tests/AppHarnessDebug.ts
-tests/debug.html
+npm-debug.log
+tests/
 
 # Project property files
 .actionScriptProperties
