--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "Apache version 2.0",
   "devDependencies": {
     "browserify": "^8.1.3",
+    "del": "^1.1.1",
     "exorcist": "^0.1.6",
     "glob": "^4.4.0",
     "gulp": "^3.8.11",
