--- a/package.json
+++ b/package.json
@@ -8,20 +8,17 @@
   "license": "Apache version 2.0",
   "devDependencies": {
     "browserify": "^8.1.3",
-    "del": "^1.1.1",
     "exorcist": "^0.1.6",
     "glob": "^4.4.0",
     "gulp": "^3.8.11",
-    "gulp-concat": "^2.5.0",
     "gulp-git": "^1.0.1",
     "gulp-livereload": "^3.7.0",
     "gulp-rename": "^1.2.0",
     "gulp-shell": "^0.3.0",
-    "gulp-sourcemaps": "git://github.com/rob-bateman/gulp-sourcemaps.git",
+    "gulp-sourcemaps": "^1.5.0",
     "gulp-typescript": "^2.4.2",
     "gulp-uglify": "^1.1.0",
-    "tsify": "^0.8.0",
-    "vinyl-map": "^1.0.1",
+    "tsify": "git://github.com/rob-bateman/tsify.git",
     "vinyl-source-stream": "^1.0.0",
     "vinyl-transform": "^1.0.0",
     "watchify": "^2.3.0"
