--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.12.2",
     "gulp-uglify": "^1.5.3",
+    "systemjs-builder": "^0.15.14",
     "tsify": "^0.14.1",
     "vinyl-source-stream": "^1.1.0",
     "vinyl-transform": "^1.0.0",
