--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "awayjs-core",
+  "name": "@awayjs/core",
   "version": "0.6.39",
   "description": "AwayJS core classes",
   "url": "http://www.away3d.com",
