update modules to bundle output using rollup for faster rebuilds, update typscript version

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "compilerOptions": {
     "target": "ES5",
-    "module": "commonjs",
+    "module": "ES2015",
     "moduleResolution": "node",
+    "noImplicitUseStrict": true,
+    "noEmitHelpers": true,
+    "importHelpers": true,
     "declaration": true,
-    "outDir": "./dist",
-    "baseUrl": "."
+    "outDir": "./dist"
   },
   "files": [
     "./index.ts"
