--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "@awayjs/core",
   "version": "0.6.56",
   "description": "AwayJS core classes",
+  "main": "bundle/awayjs-core.umd.js",
+  "types": "dist/index.d.ts",
   "url": "http://www.away3d.com",
   "author": "Rob Bateman",
   "repository": {
@@ -10,12 +12,14 @@
   },
   "scripts": {
     "rimraf": "rimraf",
+    "rollup": "rollup -c",
+    "uglifyjs": "uglifyjs ./bundle/awayjs-core.umd.js -o ./bundle/awayjs-core.umd.min.js --in-source-map ./bundle/awayjs-core.umd.js.map --source-map ./bundle/awayjs-core.umd.min.js.map --mangle",
     "tsc": "tsc",
-    "clean": "npm cache clean && npm run rimraf -- node_modules dist",
-    "clean:dist": "npm run rimraf -- dist",
-    "watch": "npm run build -- --w",
+    "clean": "npm cache clean && npm run rimraf -- node_modules dist bundle",
+    "clean:dist": "npm run rimraf -- dist bundle",
+    "watch": "npm run tsc -- --w",
     "prebuild": "npm run clean:dist",
-    "build": "tsc",
+    "build": "npm run tsc && npm run rollup && npm run uglifyjs",
     "version": "npm run build",
     "postversion": "git push && git push --tags && npm publish"
   },
@@ -31,8 +35,14 @@
     "url": "https://github.com/awayjs/core/issues"
   },
   "homepage": "https://github.com/awayjs/core#readme",
+  "dependencies": {
+    "tslib": "github:microsoft/tslib"
+  },
   "devDependencies": {
     "rimraf": "^2.5.2",
-    "typescript": "^1.9.0-dev.20160603-1.0"
+    "rollup": "^0.36.3",
+    "rollup-plugin-includepaths": "^0.1.6",
+    "typescript": "^2.2.0-dev.20161123",
+    "uglifyjs": "^2.4.10"
   }
 }
