--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: node_js
 node_js:
-  - "0.11"
-install:
-  - "npm install -g gulp"
-  - "npm install"
-script:
-  - "gulp package"
+- stable
+script: bash ./deploy.sh
+env:
+  global:
+  - ENCRYPTION_LABEL: 86cecb7786d0
