Change docs to html format

--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "clean:dist": "npm run rimraf -- dist bundle",
     "watch": "npm run tsc -- --w",
     "prebuild": "npm run clean:dist",
-    "build": "npm run tsc && npm run rollup && npm run uglifyjs",
+    "build": "npm run tsc && npm run rollup && npm run uglifyjs && npm run docs",
     "version": "npm run build",
     "postversion": "git push && git push --tags && npm publish",
-    "docs": "node_modules/typedoc-md-theme/bin/typedoc --options typedoc.json --source lib"
+    "docs": "typedoc --options typedoc.json lib"
   },
   "keywords": [
     "AwayJS",
@@ -44,8 +44,6 @@
     "rollup": "^0.36.3",
     "rollup-plugin-includepaths": "^0.2.1",
     "typedoc": "^0.5.5",
-    "typedoc-md-theme": "^1.0.1",
-    "typedoc-plugin-external-module-name": "^1.0.8",
     "typescript": "2.2.0-dev.20161123",
     "uglifyjs": "^2.4.10"
   }
