Use typedoc api instead of binary so that methods can be intercepted In this case, start by making sure that output html files are not forced to lowercase, but follow the library’s use of camel case.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "npm run tsc && npm run rollup && npm run uglifyjs && npm run docs",
     "version": "npm run build",
     "postversion": "git push && git push --tags && npm publish",
-    "docs": "typedoc --options typedoc.json lib"
+    "docs": "node docsTheme/awaydoc.js --options typedoc.json --source lib"
   },
   "keywords": [
     "AwayJS",
