Group doc classes in modules

--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   },
   "homepage": "https://github.com/awayjs/core#readme",
   "dependencies": {
-    "tslib": "github:microsoft/tslib"
+    "tslib": "github:microsoft/tslib",
+    "typedoc-plugin-external-module-name": "^1.0.8"
   },
   "devDependencies": {
     "rimraf": "^2.5.2",
