Point docgen to new repo

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "npm run tsc && npm run rollup && npm run uglifyjs && npm run docs",
     "version": "npm run build",
     "postversion": "git push && git push --tags && npm publish",
-    "docs": "rm -rf docs/bin || true && node node_modules/awayjs-docs/awaydoc.js"
+    "docs": "rm -rf docs/bin || true && node node_modules/@awayjs/typedoc-theme/awaydoc.js"
   },
   "keywords": [
     "AwayJS",
@@ -37,10 +37,10 @@
   },
   "homepage": "https://github.com/awayjs/core#readme",
   "dependencies": {
+    "@awayjs/typedoc-theme": "^0.1.1",
     "tslib": "github:microsoft/tslib"
   },
   "devDependencies": {
-    "awayjs-docs": "^1.0.0",
     "rimraf": "^2.5.2",
     "rollup": "^0.36.3",
     "rollup-plugin-includepaths": "^0.2.1",
