Add remote triggering keys

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,4 @@ script: bash ./deploy.sh
 env:
   global:
   - ENCRYPTION_LABEL: 15094503a9ff
+  - secure: ZDVGRFPpzhrhVakfte1kYBbHJpif0RAOt54w2Fx3KfMfLVQN4sTReTF42SNwl30CjZMZrtNOy8DX/dC9zNUHRLbFamTBo6FIjSFdNpSkavDUxY//tFdSbCAqLF6GNpCmC6di4D3HXr3BXn55PHGgNX1esdgM4Rudf+A8w9Ynbe0=
