--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "rimraf": "rimraf",
     "rollup": "rollup -c",
-    "uglifyjs": "uglifyjs ./bundle/awayjs-core.umd.js -o ./bundle/awayjs-core.umd.min.js --in-source-map ./bundle/awayjs-core.umd.js.map --source-map ./bundle/awayjs-core.umd.min.js.map --mangle",
+    "uglifyjs": "uglifyjs ./bundle/awayjs-core.umd.js -o ./bundle/awayjs-core.umd.min.js --in-source-map ./bundle/awayjs-core.umd.js.map --source-map --output ./bundle/awayjs-core.umd.min.js.map --mangle",
     "tsc": "tsc",
     "clean": "npm cache clean && npm run rimraf -- node_modules dist bundle",
     "clean:dist": "npm run rimraf -- dist bundle",
@@ -43,6 +43,6 @@
     "rollup": "^0.36.3",
     "rollup-plugin-includepaths": "^0.2.1",
     "typescript": "2.2.0-dev.20161123",
-    "uglifyjs": "^2.4.10"
+    "uglify-js": "^3.0.15"
   }
 }
