--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.7.10",
   "description": "AwayJS core classes",
   "main": "bundle/awayjs-core.umd.js",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "url": "http://www.away3d.com",
   "author": "Rob Bateman",
