--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "watch": "npm run tsc -- --w",
     "prebuild": "npm run clean:dist",
     "build": "npm run tsc && npm run rollup && npm run uglifyjs",
-    "version": "npm run build",
-    "postversion": "git push && git push --tags && npm publish"
+    "version": "",
+    "postversion": "echo $npm_package_version"
   },
   "keywords": [
     "AwayJS",
