--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "prebuild": "npm run clean:dist",
     "build": "npm run tsc && npm run rollup && npm run uglifyjs",
     "version": "",
-    "postversion": "node ./consoleLogVersion"
+    "postversion": "echo npm_package_version  && node ./consoleLogVersion"
   },
   "keywords": [
     "AwayJS",
