--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "homepage": "https://github.com/awayjs/core#readme",
   "dependencies": {
+    "fs-extra": "^6.0.1",
     "tslib": "^1.9.0"
   },
   "devDependencies": {
