--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "watch": "npm run tsc -- --w",
     "prebuild": "npm run clean:dist",
     "build": "npm run tsc && npm run rollup && npm run uglifyjs",
-    "version": "",
-    "postversion": "echo %npm_package_version%  && node ./consoleLogVersion"
+    "version": "npm run build",
+    "postversion": "node ./consoleLogVersion"
   },
   "keywords": [
     "AwayJS",
