--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "prebuild": "npm run clean:dist",
     "build": "npm run tsc && npm run rollup && npm run uglifyjs",
     "version": "npm run build",
-    "postversion": "node ./consoleLogVersion && git add . && git commit -m 'add log for version' && git push && git push --tags"
+    "postversion": "node ./consoleLogVersion && git add . && git commit -m 'addLogForVersion' && git push && git push --tags"
   },
   "keywords": [
     "AwayJS",
