--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "prebuild": "npm run clean:dist",
     "build": "npm run tsc && npm run rollup && npm run uglifyjs",
     "version": "npm run build",
-    "postversion": "node ./consoleLogVersion"
+    "postversion": "npm run copyVersionToIndex",
+    "copyVersionToIndex": "node ./copyVersionToIndex && git add . && git commit -m 'addVersionToIndex'"
   },
   "keywords": [
     "AwayJS",
