update package.json with eslint checks

--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "tsc:build": "npm run tsc || exit 0",
     "clean": "npm cache clean && npm run rimraf -- node_modules dist bundle",
     "clean:dist": "npm run rimraf -- dist bundle",
+    "eslint": "eslint ./lib --fix",
+    "eslint:commit": "npm run eslint && npm run --silent gitdiff || git add -u && git commit -m \"fixed by eslint\"",
     "watch": "npm run tsc -- --w",
+    "gitdiff": "git diff --quiet && git diff --cached --quiet",
     "prebuild": "npm run clean:dist",
     "build": "npm run tsc:build && npm run rollup && npm run uglifyjs",
     "copyVersionToIndex": "node ./copyVersionToIndex && git add ./index.ts && git commit -m \"update version number in index.ts\"",
+    "preversion": "npm run gitdiff && npm run eslint:commit",
     "version": "npm run copyVersionToIndex && npm run build",
     "postversion": "git push && git push --tags && npm publish"
   },
@@ -46,7 +50,7 @@
     "@saji/eslint-plugin-brace-rules": "^0.2.1",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.0.0",
     "rimraf": "^2.5.2",
     "rollup": "^0.36.3",
     "rollup-plugin-includepaths": "^0.2.1",
