minor update to package dependencies

--- a/package.json
+++ b/package.json
@@ -47,12 +47,13 @@
     "tslib": "^1.9.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.30.0",
-    "@typescript-eslint/parser": "^2.30.0",
-    "eslint": "^7.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
+    "eslint": "^7.11.0",
     "rimraf": "^2.5.2",
     "rollup": "^0.36.3",
     "rollup-plugin-includepaths": "^0.2.1",
+    "tslib": "^1.9.0",
     "typescript": "^3.7.3",
     "uglify-js": "^3.0.15"
   }
