--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
+    "assemblyscript": "^0.19.22",
     "eslint": "^7.11.0",
     "rimraf": "^2.5.2",
     "rollup": "^0.36.3",
