--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,14 @@
   "compilerOptions": {
     "target": "es5",
     "module": "es2015",
-    "lib": ["es6", "ES2015.Symbol","DOM","ScriptHost","ES2015.Iterable"],
+    "lib": ["DOM","ScriptHost","ESNext"],
     "moduleResolution": "node",
     "noImplicitUseStrict": true,
     "noEmitHelpers": true,
     "importHelpers": true,
     "declaration": true,
     "declarationMap": true,
+    "ignoreDeprecations": "5.0",
     "outDir": "./dist"
   },
   "exclude": [
