--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@awayjs/core",
-  "version": "0.9.44",
+  "version": "0.9.45",
   "description": "AwayJS core classes",
   "main": "bundle/awayjs-core.umd.js",
   "module": "dist/index.js",
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "rimraf": "rimraf",
-    "rollup": "rollup -c",
+    "rollup": "rollup -c --bundleConfigAsCjs",
     "tsc": "tsc",
     "tsc:build": "npm run tsc || exit 0",
     "clean": "npm cache clean && npm run rimraf -- node_modules dist bundle",
@@ -45,15 +45,15 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^18.0.0",
-    "@rollup/plugin-terser": "^0.4.3",
-    "@rollup/plugin-node-resolve": "^11.2.1",
-    "@typescript-eslint/eslint-plugin": "^4.4.1",
-    "@typescript-eslint/parser": "^4.4.1",
-    "eslint": "^7.11.0",
-    "rimraf": "^2.5.2",
-    "rollup": "^2.79.1",
-    "tslib": "^2.3.0",
-    "typescript": "^4.9.5"
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@typescript-eslint/eslint-plugin": "^6.9.0",
+    "@typescript-eslint/parser": "^6.9.0",
+    "eslint": "^8.52.0",
+    "rimraf": "^5.0.5",
+    "rollup": "^4.1.4",
+    "tslib": "^2.6.2",
+    "typescript": "^5.2.2"
   }
 }
